--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,146 @@
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-.home {
-  background: #fde68a;
-  color: #1e293b;
-  overflow: hidden;
-}
-p {
-  font-size: 1.25rem;
-}
-.about {
-  padding: 55px 50px;
 
-  background: #1e293b;
-  color: #fff;
+.heading {
+  font-family: "Anton", sans-serif;
+  display: flex;
+  justify-content: center;
+  font-size: 1.941rem !important;
 }
-.contact {
+.sub-heading {
+  font-family: "Anton", sans-serif;
+  font-size: 1.566rem !important;
+}
+
+/* *Home  */
+
+.home {
+  background: #fffaf0;
+  color: #333333;
   overflow: hidden;
-  background: #fde68a;
-  color: #1e293b !important;
+}
+.home h1 {
+  font-family: "Anton", sans-serif;
+}
+
+.home p,
+.about p,
+.projects p {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem !important;
+}
+
+/* *About */
+.about {
+  background: #333333;
+  color: #fffaf0;
+}
+.about-image {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 1000px;
+}
+
+#layer1 {
+  border-color: #fffaf01e !important;
+  border-radius: 1000px;
+  padding: 18px;
+}
+#layer2 {
+  border-color: #fffaf03c !important;
+  border-radius: 1000px;
+  padding: 12px;
+}
+#layer3 {
+  border-color: #fffaf053 !important;
+  border-radius: 1000px;
+  padding: 8px;
+}
+
+/* *Project */
+.projects {
+  background: #fffaf0;
+  color: #333333;
+  overflow: hidden;
+}
+.project-desc {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+}
+
+li .nav-link {
+  font-family: "Poppins", sans-serif;
+  color: #333333 !important;
+}
+li .active {
+  background: #333333 !important;
+  color: #fffaf0 !important;
+}
+
+.card-card .card {
+  background: #fffaf0;
+  color: #333333;
+}
+.card-card a {
+  background: #333333;
+  color: #fffaf0;
+}
+.card-card a:hover {
+  background: #333333e2;
+  color: #fffaf0;
+  border-color: #333333e2 !important;
+}
+.card-card .card-btn .s-btn {
+  background: #fffaf0 !important;
+  color: #333333 !important;
+  outline: #333333 !important;
+  border-color: #333333 !important;
+}
+.card-card .card-btn .s-btn:hover {
+  background: #333333 !important;
+  color: #fffaf0 !important;
+  border-color: #333333 !important;
+}
+.card-card p {
+  font-size: 1rem !important;
+}
+
+/* *Contact */
+.contact {
+  font-family: "Poppins", sans-serif;
+  overflow: hidden;
+  background: #333333;
+  color: #fffaf0;
+  border-bottom-color: #fffaf0 !important;
+}
+li .contact-link {
+  color: #daa520;
+  text-decoration: underline;
 }
 input {
-  background: transparent;
+  background: #fffaf0 !important;
 }
-.projects {
-  overflow: hidden;
+input:focus {
+  outline: none !important;
+  border: none !important;
+}
+textarea {
+  background: #fffaf0 !important;
+}
+form button:hover {
+  color: #333333 !important;
+  background: #fffaf0 !important;
+}
+form button {
+  background: #333333 !important;
+  color: #fffaf0 !important;
+  border-color: #333333 !important;
 }
